fix: project description bad reading on mobile

--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,3 +1,3 @@
 .markdown-body {
-    @apply px-20 py-10;
+    @apply px-0 md:px-20 py-4 md:py-10 dark:bg-transparent
 }
